--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/icona.png"/>
+    <link rel="icon" type="image/svg+xml" href="/public/icon.png" class="w-10"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flavor Express</title>
   </head>
